[gd_scene load_steps=12 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://assets/2685.jpg" type="Texture" id=2]
[ext_resource path="res://assets/triangle.png" type="Texture" id=3]
[ext_resource path="res://area.gd" type="Script" id=4]
[ext_resource path="res://assets/area.png" type="Texture" id=5]
[ext_resource path="res://assets/pulser.png" type="Texture" id=6]
[ext_resource path="res://assets/egattes.png" type="Texture" id=7]
[ext_resource path="res://actor.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=4]
radius = 167.785

[sub_resource type="CircleShape2D" id=3]
radius = 42.6762

[sub_resource type="CircleShape2D" id=2]
radius = 44.092

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="backgound" type="Node2D" parent="."]
editor/display_folded = true

[node name="sand1" type="Sprite" parent="backgound"]
position = Vector2( 296.25, 221.816 )
texture = ExtResource( 2 )

[node name="sand2" type="Sprite" parent="backgound"]
position = Vector2( 300.75, 665.066 )
texture = ExtResource( 2 )

[node name="sand3" type="Sprite" parent="backgound"]
position = Vector2( 300.75, 1101.57 )
texture = ExtResource( 2 )

[node name="triangle" type="Node2D" parent="."]
editor/display_folded = true

[node name="triangle" type="Sprite" parent="triangle"]
position = Vector2( 287.25, 136.569 )
scale = Vector2( 0.76, 0.76 )
texture = ExtResource( 3 )

[node name="area" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 4 )

[node name="area" type="Sprite" parent="area"]
position = Vector2( 287.25, 159.069 )
scale = Vector2( 0.92, 0.92 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="area/area"]

[node name="areaCollision" type="CollisionShape2D" parent="area/area/Area2D"]
shape = SubResource( 4 )

[node name="pulser" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 33, 786 )
scale = Vector2( 0.92, 0.92 )

[node name="pulser" type="Sprite" parent="pulser"]
position = Vector2( 287.25, 159.069 )
scale = Vector2( 0.92, 0.92 )
texture = ExtResource( 6 )

[node name="egattes" type="Node2D" parent="."]

[node name="egatte1" type="RigidBody2D" parent="egattes"]
position = Vector2( 289.5, 76.5 )
mass = 5.94082
gravity_scale = 0.0

[node name="egatteCollision" type="CollisionShape2D" parent="egattes/egatte1"]
position = Vector2( 1.50015, 1.50034 )
scale = Vector2( 0.48, 0.48 )
shape = SubResource( 3 )

[node name="egatte" type="Sprite" parent="egattes/egatte1"]
position = Vector2( 0.282959, 3.06467 )
scale = Vector2( 0.48, 0.48 )
texture = ExtResource( 7 )
hframes = 9
frame = 5

[node name="Button" type="Button" parent="egattes/egatte1/egatte"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -43.0
margin_top = -40.9999
margin_right = 40.0
margin_bottom = 39.0001

[node name="egatte2" type="RigidBody2D" parent="egattes"]
position = Vector2( 237, 130.5 )
mass = 5.94082
gravity_scale = 0.0

[node name="egatteCollision" type="CollisionShape2D" parent="egattes/egatte2"]
position = Vector2( 1.50015, 1.50034 )
scale = Vector2( 0.48, 0.48 )
shape = SubResource( 3 )

[node name="egatte" type="Sprite" parent="egattes/egatte2"]
position = Vector2( 0.282959, 3.06467 )
scale = Vector2( 0.48, 0.48 )
texture = ExtResource( 7 )
hframes = 9
frame = 2

[node name="Button" type="Button" parent="egattes/egatte2/egatte"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -43.0
margin_top = -40.9999
margin_right = 40.0
margin_bottom = 39.0001

[node name="egatte3" type="RigidBody2D" parent="egattes"]
position = Vector2( 186, 193.5 )
mass = 5.94082
gravity_scale = 0.0

[node name="egatteCollision" type="CollisionShape2D" parent="egattes/egatte3"]
position = Vector2( 1.50015, 1.50034 )
scale = Vector2( 0.48, 0.48 )
shape = SubResource( 3 )

[node name="egatte" type="Sprite" parent="egattes/egatte3"]
position = Vector2( 0.282959, 3.06467 )
scale = Vector2( 0.48, 0.48 )
texture = ExtResource( 7 )
hframes = 9

[node name="Button" type="Button" parent="egattes/egatte3/egatte"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -43.0
margin_top = -40.9999
margin_right = 40.0
margin_bottom = 39.0001

[node name="egatte4" type="RigidBody2D" parent="egattes"]
position = Vector2( 286.5, 198 )
mass = 5.94082
gravity_scale = 0.0

[node name="egatteCollision" type="CollisionShape2D" parent="egattes/egatte4"]
position = Vector2( 1.50015, 1.50034 )
scale = Vector2( 0.48, 0.48 )
shape = SubResource( 3 )

[node name="egatte" type="Sprite" parent="egattes/egatte4"]
position = Vector2( 0.282959, 3.06467 )
scale = Vector2( 0.48, 0.48 )
texture = ExtResource( 7 )
hframes = 9
frame = 4

[node name="Button" type="Button" parent="egattes/egatte4/egatte"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -43.0
margin_top = -40.9999
margin_right = 40.0
margin_bottom = 39.0001

[node name="egatte5" type="RigidBody2D" parent="egattes"]
position = Vector2( 388.5, 198 )
mass = 5.94082
gravity_scale = 0.0

[node name="egatteCollision" type="CollisionShape2D" parent="egattes/egatte5"]
position = Vector2( 1.50015, 1.50034 )
scale = Vector2( 0.48, 0.48 )
shape = SubResource( 3 )

[node name="egatte" type="Sprite" parent="egattes/egatte5"]
position = Vector2( 0.282959, 3.06467 )
scale = Vector2( 0.48, 0.48 )
texture = ExtResource( 7 )
hframes = 9
frame = 1

[node name="Button" type="Button" parent="egattes/egatte5/egatte"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -43.0
margin_top = -40.9999
margin_right = 40.0
margin_bottom = 39.0001

[node name="egatte6" type="RigidBody2D" parent="egattes"]
editor/display_folded = true
position = Vector2( 340.5, 132 )
mass = 5.94082
gravity_scale = 0.0

[node name="egatteCollision" type="CollisionShape2D" parent="egattes/egatte6"]
position = Vector2( 1.50015, 1.50034 )
scale = Vector2( 0.48, 0.48 )
shape = SubResource( 3 )

[node name="egatte" type="Sprite" parent="egattes/egatte6"]
position = Vector2( 0.282959, 3.06467 )
scale = Vector2( 0.48, 0.48 )
texture = ExtResource( 7 )
hframes = 9

[node name="Button" type="Button" parent="egattes/egatte6/egatte"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -43.0
margin_top = -40.9999
margin_right = 40.0
margin_bottom = 39.0001

[node name="actor" type="KinematicBody2D" parent="."]
position = Vector2( -186, 880.5 )
script = ExtResource( 8 )

[node name="actorCollision" type="CollisionShape2D" parent="actor"]
position = Vector2( -1.00024, -0.000183105 )
shape = SubResource( 2 )

[node name="actorSprite" type="Sprite" parent="actor"]
position = Vector2( -1.03583, -1.24097 )
texture = ExtResource( 7 )
hframes = 9

[node name="Button" type="Button" parent="actor/actorSprite"]
self_modulate = Color( 1, 1, 1, 0.27451 )
margin_left = -41.5
margin_top = -39.4998
margin_right = 41.5
margin_bottom = 40.5002

[node name="tween" type="Tween" parent="actor"]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="actor"]
position = Vector2( -1.5, -7.15256e-006 )
scale = Vector2( 3.85, 3.7 )

[node name="score" type="Node2D" parent="."]
position = Vector2( 490.5, 16.5 )

[node name="score" type="Label" parent="score"]
anchor_left = 0.06
anchor_right = 0.06
margin_left = 13.4999
margin_top = -4.5
margin_right = 53.4999
margin_bottom = 9.5
rect_scale = Vector2( 2.24, 2.24 )
text = "0000"

[connection signal="body_exited" from="area/area/Area2D" to="area" method="_on_Area2D_body_exited"]
[connection signal="button_down" from="egattes/egatte2/egatte/Button" to="egattes/egatte2" method="_on_Button_button_down"]
[connection signal="button_up" from="egattes/egatte2/egatte/Button" to="egattes/egatte2" method="_on_Button_button_up"]
[connection signal="button_down" from="egattes/egatte3/egatte/Button" to="egattes/egatte3" method="_on_Button_button_down"]
[connection signal="button_up" from="egattes/egatte3/egatte/Button" to="egattes/egatte3" method="_on_Button_button_up"]
[connection signal="button_down" from="egattes/egatte4/egatte/Button" to="egattes/egatte4" method="_on_Button_button_down"]
[connection signal="button_up" from="egattes/egatte4/egatte/Button" to="egattes/egatte4" method="_on_Button_button_up"]
[connection signal="button_down" from="egattes/egatte5/egatte/Button" to="egattes/egatte5" method="_on_Button_button_down"]
[connection signal="button_up" from="egattes/egatte5/egatte/Button" to="egattes/egatte5" method="_on_Button_button_up"]
[connection signal="button_down" from="egattes/egatte6/egatte/Button" to="egattes/egatte6" method="_on_Button_button_down"]
[connection signal="button_up" from="egattes/egatte6/egatte/Button" to="egattes/egatte6" method="_on_Button_button_up"]
[connection signal="button_down" from="actor/actorSprite/Button" to="actor" method="_on_Button_button_down"]
[connection signal="button_up" from="actor/actorSprite/Button" to="actor" method="_on_Button_button_up"]
[connection signal="screen_exited" from="actor/VisibilityNotifier2D" to="actor" method="_on_VisibilityNotifier2D_screen_exited"]
